# geopkg

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml  linters.yml  tests.yml
geopkg/: __init__.py  constants.py  exceptions.py  geo_library.py  geotiler.py  grid.py  tile.py  tile_create.py  tile_creator.py  types.py  validators.py
geopkg/download/: ref_data.py
geopkg/model/: geocode.py
geopkg/tile/: __init__.py  compute.py  core.py
geopkg/types/: __init__.py  geo.py  model.py  zoom.py
tests/: test_grid.py  test_linter.py  test_tile.py  test_types.py
typings/mercantile/: __init__.pyi
typings/shapely/geometry/: __init__.pyi
