[tool.poetry]
name = "geopkg"
version = "0.1.0"
description = ""
authors = ["ellsphillips <elliott.phillips.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fiona = "^1.9.4.post1"
pydantic = "^2.3.0"
pyogrio = "^0.6.0"
geopandas = "^0.13.2"
requests = "^2.31.0"
geojson = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
flake8 = "^6.1.0"
mypy = "^1.5.1"
isort = "^5.12.0"
black = {version = "^23.7.0", allow-prereleases = true}
types-setuptools = "^68.2.0.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
