[tool.poetry]
name = "geopkg"
version = "0.1.1"
description = ""
authors = ["ellsphillips <elliott.phillips.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
fiona = "^1.9.4.post1"
pydantic = "^2.3.0"
pyogrio = "^0.6.0"
geopandas = "^0.13.2"
requests = "^2.31.0"
geojson = "^3.0.1"
mercantile = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.981"
coverage = "6.3.2"
isort = "^5.12.0"
pre-commit = "^2.20.0"
black = {version = "^22.6.0", allow-prereleases = true}
flake8 = "^5.0.4"
pylint = "2.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
